--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,39 +5,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:padding="50dp"
+    android:padding="20dp"
+    android:paddingHorizontal="100dp"
     android:orientation="vertical"
     >
 
-    <View
-        android:id="@+id/thermometerView"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraints"
         android:layout_width="300dp"
-        android:layout_height="400dp"
-        app:layout_constraintBottom_toTopOf="@id/editTextNumberSigned"
+        android:layout_height="440dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/label">
+        <view
+            class="com.example.u228.DrawingView"
+            android:id="@+id/drawingView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextNumberSigned"
-        android:layout_width="250dp"
-        android:layout_height="48dp"
-        android:hint="@string/input_field_hit"
-        android:inputType="numberSigned"
-        android:textColorHint="#757575"
-        app:layout_constraintBottom_toTopOf="@id/button"
+        <ImageView
+            android:id="@+id/thermometerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/thermometer"
+            android:src="@drawable/thermometer2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/label"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:textSize="20sp"
+        android:text="@string/user_hint"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/thermometerView"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toBottomOf="@id/constraints"
+        app:layout_constraintBottom_toTopOf="@id/seekBar" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/button_label"
+        android:min="-100"
+        android:max="100"
+        android:progress="0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSigned" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/label" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
